--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
