--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "lite-server": "^2.6.1",
     "vue": "^2.6.14",
     "web3": "^1.7.5"
   },
