--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "lite-server": "^2.6.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "truffle-contract": "^4.0.31",
     "vue": "^2.6.14",
     "web3": "^1.7.5"
@@ -39,6 +40,14 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
+  },
+  "browser": {
+    "http": false,
+    "https": false,
+    "net": false,
+    "path": false,
+    "stream": false,
+    "tls": false
   },
   "browserslist": [
     "> 1%",
